# data-engineer-assignment-robert

./: A2.py  Eliq_home_assignment.docx  README.MD  create_parquet.py  flattened_energy_data.parquet  input_data.parquet  pyproject.toml
