[project]
name = "etl-script"
version = "0.1.0"
description = ""
authors = [
    {name = "robertslipac",email = "robert.slipac@datavarde.se"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
